
[tool.flake8]
max-line-length = 120
extend-ignore = "E203"
[tool.poetry]
name = "tap-bing-ads"
version = "2.0.16"
description = "A tap to connect to Bing Ads"
authors = ["y42 developers <info@y42.com>"]

[tool.poetry.dependencies]
python = "^3.9"
arrow = "0.12.0"
poetry-core = "1.0.4"
bingads = "13.0.3"
singer-python= "5.9.0"
requests = "2.26.0"
tenacity = "8.0.1"
stringcase = "1.2.0"
backoff = "1.8.0"



[tool.poetry.dev-dependencies]
integrations-testing-framework = {git = "git@github.com:goes-funky/integrations-testing-framework.git"}
pdoc3 = "0.10.0"
mypy = "0.910"
pylint = "2.11.1"
pytest = "6.2.4"
coverage = "^6.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tap-clickup = "tap_bing_ads:main"